--- a/firstdjangoproject/little_paws_project/Templates/adopt_foster_city.html
+++ b/firstdjangoproject/little_paws_project/Templates/adopt_foster_city.html
@@ -30,6 +30,7 @@ form.search input[type=text] {
 
 form.search button {
   float:left;
+  height: 42px;														
   width: 5%;
   padding: 10px;
   background:#e60000;
