--- a/firstdjangoproject/little_paws_project/Templates/adopt_foster_city.html
+++ b/firstdjangoproject/little_paws_project/Templates/adopt_foster_city.html
@@ -24,6 +24,9 @@ form.search input[type=text] {
   float:center;
   width: 30%;
   float:left;
+  border-radius: 5px;
+														
+ 
   
   
 }
@@ -39,10 +42,11 @@ form.search button {
   border: 1px solid grey;
   border-left: none;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 form.search button:hover {
-  background: #FF4500;
+  background:#ff6600fd;
 }
 
 .city {
