--- a/firstdjangoproject/little_paws_project/Templates/petdetails.html
+++ b/firstdjangoproject/little_paws_project/Templates/petdetails.html
@@ -14,6 +14,7 @@
   
     width: 20%;
     height: 20%;
+    border-radius: 20px;
     background-color: #FFFFFF;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
@@ -39,7 +40,7 @@
     <center>
     <div class="pet_details_container" >
         <div class="container" >
-            <img src="{{pet_detail.pet_image.url}}" style="width:100%; height:100%;" >
+            <img src="{{pet_detail.pet_image.url}}" style="width:100%; height:100%; border-radius: 20px;" >
             <form action="shelter_details/" method="POST">
               {% csrf_token %}
             <button class="open-button" value="{{pet_detail.pet_shelter}}" name="shelter_details">Click here to View shelter Details</button><br>
